Changing jobs with Emma
We needed to change so we are committing and fething orgining.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	</div>
 	<div id="rightColumn">
 		<p>Chicks: <input id="chicks" type="text" value="0"></p>
+		<p>Cartons: <input id="cartons" type="text" value="0"></p>
+		<p>Farms:
 	</div>
 </div>
 
