--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 <div id="wrapper">
 	<div id="leftColumn">
 		<h1>Chicken Clicker</h1>
-		<button onclick="chicken_clicker();"><img src="images/chicken.html"></button>
+		<button onclick="chicken_clicker();"><img src="images/chicken.png"></button>
 		<p>Eggs: <input id="eggs" type="text" value="0"></p>
 	</div>
 	<div id="rightColumn">
 		<p>Chicks: <input id="chicks" type="text" value="0"></p>
 		<p>Cartons: <input id="cartons" type="text" value="0"></p>
-		<p>Farms:
+		<p>Farms: <input id="farms" type="text" value="0"></p>
+		<p> Eggtopia: <input id="eggtopia" type="text" value="0"></p>
+		<p> Chicken Universe <input id="chickenuniverse" tyoe="text" value="0"></p>
 	</div>
 </div>
 
