added chick button

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 	</div>
 	<div id="rightColumn">
 		<p>Chicks: <input id="chicks" type="text" value="0"></p>
+			<button onclick="buy_chick();"></button>
 		<p>Cartons: <input id="cartons" type="text" value="0"></p>
 		<p>Farms: <input id="farms" type="text" value="0"></p>
 		<p> Eggtopia: <input id="eggtopia" type="text" value="0"></p>
-		<p> Chicken Universe <input id="chickenuniverse" tyoe="text" value="0"></p>
+		<p> Chicken Universe <input id="chicken_universe" tyoe="text" value="0"></p>
 	</div>
 </div>
 
