--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
 		<h1>Chicken Clicker</h1>
 		<button onclick="chicken_clicker();"><img src="images/chicken.png"></button>
 		<p>Eggs: <input id="eggs" type="text" value="0"></p>
+			<button onclick="eggs();"></button>
 	</div>
 	<div id="rightColumn">
 		<p>Chicks: <input id="chicks" type="text" value="0"></p>
 			<button onclick="buy_chick();"></button>
 		<p>Cartons: <input id="cartons" type="text" value="0"></p>
+			<button onclick="cartons();"></button>
 		<p>Farms: <input id="farms" type="text" value="0"></p>
+			<button onclick="farms();"></button>
 		<p> Eggtopia: <input id="eggtopia" type="text" value="0"></p>
+			<button onclick="eggtopia();"></button>
 		<p> Chicken Universe <input id="chicken_universe" tyoe="text" value="0"></p>
+			<button onclick="chicken_universe();"></button>
 	</div>
 </div>
 
