--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
 		<p>Chicks: <input id="chicks" type="text" value="0"></p>
 			<button onclick="buy_chick();"></button>
 		<p>Cartons: <input id="cartons" type="text" value="0"></p>
-			<button onclick="cartons();"></button>
+			<button onclick="buy_carton();"></button>
 		<p>Farms: <input id="farms" type="text" value="0"></p>
-			<button onclick="farms();"></button>
+			<button onclick="buy_farms();"></button>
 		<p> Eggtopia: <input id="eggtopia" type="text" value="0"></p>
-			<button onclick="eggtopia();"></button>
+			<button onclick="buy_eggtopia();"></button>
 		<p> Chicken Universe <input id="chicken_universe" tyoe="text" value="0"></p>
-			<button onclick="chicken_universe();"></button>
+			<button onclick="buy_universe();"></button>
 	</div>
 </div>
 
+
+make button names
 
 
 </body>
