neiko fixed the image

--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
 <div id="wrapper">
 	<div id="leftColumn">
 		<h1>Chicken Clicker</h1>
-		<button onclick="chicken_clicker();"><img src="images/chicken.png"></button>
+		<img src="images/chicken.png" onclick="chicken_clicker();">
 		<p>Eggs: <input id="eggs" type="text" value="0"></p>
 	</div>
 	<div id="rightColumn">
 		<p>Chicks: <input id="chicks" type="text" value="0"></p>
 			<button onclick="buy_chick();"></button>
+			<br>
 		<p>Cartons: <input id="cartons" type="text" value="0"></p>
 			<button onclick="buy_carton();"></button>
+			<br>
 		<p>Farms: <input id="farms" type="text" value="0"></p>
 			<button onclick="buy_farms();"></button>
+			<br>
 		<p> Eggtopia: <input id="eggtopia" type="text" value="0"></p>
 			<button onclick="buy_eggtopia();"></button>
+			<br>
 		<p> Chicken Universe <input id="chicken_universe" tyoe="text" value="0"></p>
 			<button onclick="buy_universe();"></button>
 	</div>
