changed 1 unnsassary thing alica wanted changed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<p> Eggtopia: <input id="eggtopia" type="text" value="0"></p>
 			<button onclick="buy_eggtopia();"></button>
 			<br>
-		<p> Chicken Universe <input id="chicken_universe" tyoe="text" value="0"></p>
+		<p> Chicken Universe <input id="universee" tyoe="text" value="0"></p>
 			<button onclick="buy_universe();"></button>
 	</div>
 </div>
