--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<div id="leftColumn">
 		<h1>Chicken Clicker</h1>
 		<img src="images/chicken.png" onclick="chicken_clicker();">
-		<p>Eggs: <input id="eggs" type="text" value="0"></p>
+		<p>Eggs: <input id="eggs" type="text" value="0" readonly></p>
 	</div>
 	<div id="rightColumn">
 		<p>Chicks: <input id="chicks" type="text" value="0"></p>
-			<button onclick="buy('chicks');"></button>
+			$10 Eggs: <button onclick="buy('chicks');">Buy</button>
 			<br>
 		<p>Cartons: <input id="cartons" type="text" value="0"></p>
 			<button onclick="buy('cartons');"></button>
