changed a bunch of buttons

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 			$10 Eggs: <button onclick="buy('chicks');">Buy</button>
 			<br>
 		<p>Cartons: <input id="cartons" type="text" value="0"></p>
-			<button onclick="buy('cartons');"></button>
+			$100: <button onclick="buy('cartons');">Buy</button>
 			<br>
 		<p>Farms: <input id="farms" type="text" value="0"></p>
-			<button onclick="buy('farms');"></button>
+			$1,000<button onclick="buy('farms');">Buy</button>
 			<br>
 		<p> Eggtopia: <input id="eggtopia" type="text" value="0"></p>
-			<button onclick="buy('eggtopia');"></button>
+			$100,000<button onclick="buy('eggtopia');">Buy</button>
 			<br>
 		<p> Chicken Universe <input id="universee" tyoe="text" value="0"></p>
-			<button onclick="buy('universee');"></button>
+			100,000,000<button onclick="buy('universee');">Buy</button>
 	</div>
 </div>
 
