--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			$100,000<button onclick="buy('eggtopia');">Buy</button>
 			<br>
 		<p> Chicken Universe <input id="universee" tyoe="text" value="0"></p>
-			100,000,000<button onclick="buy('universee');">Buy</button>
+			$100,000,000<button onclick="buy('universee');">Buy</button>
 	</div>
 </div>
 
