--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<p> Eggtopia: <input id="eggtopia" type="text" value="0"></p>
 			$100,000<button onclick="buy('eggtopia');">Buy</button>
 			<br>
-		<p> Chicken Universe <input id="universee" tyoe="text" value="0"></p>
+		<p> Chicken Universe <input id="universee" type="text" value="0"></p>
 			$100,000,000<button onclick="buy('universee');">Buy</button>
 	</div>
 </div>
