--- a/index.html
+++ b/index.html
@@ -16,24 +16,25 @@
 <div id="wrapper">
 	<div id="leftColumn">
 		<h1>Chicken Clicker</h1>
+		<h4> Made By: Emma Balog, Alicia Shi, and Neiko Lopez<h4>
 		<img src="images/chicken.png" onclick="chicken_clicker();">
-		<p>Eggs: <input id="eggs" type="text" value="0" readonly></p>
 	</div>
 	<div id="rightColumn">
-		<p>Chicks: <input id="chicks" type="text" value="0"></p>
-			$10 Eggs: <button onclick="buy('chicks');">Buy</button>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Eggs: <input id="eggs" type="text" value="0" readonly></p>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Chicks: <input id="chicks" type="text" value="0"></p>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $10 Eggs: <button onclick="buy('chicks');">Buy</button>
 			<br>
-		<p>Cartons: <input id="cartons" type="text" value="0"></p>
-			$100: <button onclick="buy('cartons');">Buy</button>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cartons: <input id="cartons" type="text" value="0"></p>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $100: <button onclick="buy('cartons');">Buy</button>
 			<br>
-		<p>Farms: <input id="farms" type="text" value="0"></p>
-			$1,000<button onclick="buy('farms');">Buy</button>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Farms: <input id="farms" type="text" value="0"></p>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$1,000<button onclick="buy('farms');">Buy</button>
 			<br>
-		<p> Eggtopia: <input id="eggtopia" type="text" value="0"></p>
-			$100,000<button onclick="buy('eggtopia');">Buy</button>
+		<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Eggtopia: <input id="eggtopia" type="text" value="0"></p>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $100,000<button onclick="buy('eggtopia');">Buy</button>
 			<br>
-		<p> Chicken Universe <input id="universee" type="text" value="0"></p>
-			$100,000,000<button onclick="buy('universee');">Buy</button>
+		<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Chicken Universe <input id="universee" type="text" value="0"></p>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$100,000,000<button onclick="buy('universee');">Buy</button>
 	</div>
 </div>
 
