fixed small bug

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="wrapper">
 	<div id="leftColumn">
 		<h1>Chicken Clicker</h1>
-		<h4> Made By: Emma Balog, Alicia Shi, and Neiko Lopez<h4>
+		<h4> Made By: Emma Balog, Alicia Shi, and Neiko Lopez</h4>
 		<img src="images/chicken.png" onclick="chicken_clicker();">
 	</div>
 	<div id="rightColumn">
@@ -30,6 +30,7 @@
 			<br>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Trucks: <input id="trucks" type="text" value="0"></p>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 500: <button onclick="buy('trucks');">Buy</button>
+			<br>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Farms: <input id="farms" type="text" value="0"></p>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1,000<button onclick="buy('farms');">Buy</button>
 			<br>
