made progress button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		<h1>Chicken Clicker</h1>
 		<h4> Made By: Emma Balog, Alicia Shi, and Neiko Lopez</h4>
 		<img src="images/chicken.png" onclick="chicken_clicker();">
+		<br>
+		<button onclick="save">Save Progress</button>
 	</div>
 	<div id="rightColumn">
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Eggs: <input id="eggs" type="text" value="0" readonly></p>
