added neiko thing

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 		<img src="images/chicken.png" onclick="chicken_clicker();">
 		<br>
 		<button onclick="save">Save Progress</button>
+		<input type="button" class="button number" value="go to earth" onclick="changeCSS('webapp.css.css',0)">
+	<input type="button" class="button operator" value="go to mars" onclick="changeCSS('alien.css',0)">
 	</div>
 	<div id="rightColumn">
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Eggs: <input id="eggs" type="text" value="0" readonly></p>
