--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Web App</title>
 <!--Stylesheet-->
 <link rel="stylesheet" type="text/css" href="webapp.css">
+<link rel="stylesheet" type="text/css" href="alien.css">
 <!--JavaScript-->
 <script type="text/javascript" src="webapp.js"></script>
 <!--jQuery-->
