--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<br>
 		<button onclick="save">Save Progress</button>
 		<button onclick="clear">Clear</button>
-		<button onclick="load">Load</button>
+		<button onclick="loaded">Load</button>
 		<input type="button" class="button number" value="go to earth" onclick="changeCSS('webapp.css',0)">
 	<input type="button" class="button operator" value="go to mars" onclick="changeCSS('alien.css',0)">
 	</div>
