--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--Add your HTML here-->
 <div id="wrapper">
 	<div id="leftColumn">
-		<h1>Chicken Clicker</h1>
+		<h2 id="shopName" onclick="random_name();">Click here to name your brownie shop!</h2>
 		<h4> Made By: Emma Balog, Alicia Shi, and Neiko Lopez</h4>
 		<img src="images/chicken.png" onclick="chicken_clicker();">
 		<br>
@@ -49,6 +49,7 @@
 			<br>
 		<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Chicken Universe <input id="universee" type="text" value="0"></p>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;100,000,000 Eggs:<button onclick="buy('universee');">Buy</button>
+			<embed src="mii.mp3" autostart="true" loop="true" hidden="true">
 			<br>
 			<br>
 	</div>
