--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <body>
 <!--Add your HTML here-->
 <div id="wrapper">
-	<div id="leftColumn">
+	<div id="title">
+		<h1> Chicken Clicker</h1>
+	</div>
+		<div id="leftColumn">
 		<h2 id="shopName" onclick="random_name();">Click here to name your egg company!</h2>
 		<h4> Made By: Emma Balog, Alicia Shi, and Neiko Lopez</h4>
 		<img src="images/chicken.png" onclick="chicken_clicker();">
