deleted some stuff

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 <!--JavaScript-->
 <script type="text/javascript" src="webapp.js"></script>
 <!--jQuery-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">$(document).ready(function(){
-    $("p").click(function(){
-        $(this).hide();
-    });
-});</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
  
 <body>
