moved egg amount

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 		<button onclick="clear">Clear</button>
 		<input type="button" class="button number" value="go to earth" onclick="changeCSS('webapp.css',0)">
 	<input type="button" class="button operator" value="go to mars" onclick="changeCSS('alien.css',0)">
+	<br>
+	Eggs: <input id="eggs" type="text" value="0" readonly></p>
 	</div>
 	<div id="rightColumn">
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Eggs: <input id="eggs" type="text" value="0" readonly></p>
 		<br>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Chicks: <input id="chicks" type="text" value="0"></p>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 10 Eggs: <button onclick="buy('chicks');"><img src="images/chick.png"></button>
