--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 			<br>
 			<br>
 	</div>
+	<div id="footer"><p><a href="mailto:neiko.lopez@warriorlife.net">&copy; Neiko Lopez, Emma Balog, and Alicia Shi. 2018</a></p></div>
 </div>
 
 
