--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Web App</title>
+<title>Chicken Clicker</title>
 <!--Stylesheet-->
 <link rel="stylesheet" type="text/css" href="webapp.css">
 <!--JavaScript-->
