made chicken in browser !!

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<link rel="icon" href="images/chicky.jpg" type="image/jpg" sizes="16x16">
 <meta charset="UTF-8">
 <title>Chicken Clicker</title>
 <!--Stylesheet-->
